# microservice-requests

./: README.md  custom_requests.py  pyproject.toml  test.py
