[tool.poetry]
name = "microservice-requests"
version = "0.1.0"
description = ""
authors = ["harut <harut.avetisyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
fastapi = "^0.111.0"
retry-async = "^0.1.4"
circuitbreaker = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
